--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "config": "^3.3.1",
     "core-js": "^2.6.11",
     "flatpickr": "^4.6.3",
+    "hard-source-webpack-plugin": "^0.13.1",
     "headroom.js": "^0.11.0",
     "lazysizes": "^5.2.0",
     "luxy.js": "^0.1.0",
